# Trackside

./: .gitignore  Build-Trackside.ps1  LICENSE  Preview-Trackside.ps1  README.md  Release-Trackside.ps1  Toggle-HeavenStack.rar  Toggle-TracksideStack.bat  Toggle-TracksideStack.ps1  curate_rank_icons.py  custom-intro.md  deploy-on-exit.ps1  fetch_icons.py  pack_intro.py  race-director.md  refresh_skill_data.py  rename_icons.py  slice_atlas.py
data/: card_chara.json  card_inherent.json  chara_list.json  cm_presets.json  course_specs.json  event_titles.json  rank_ranges.json  skill_chains.json  skill_data.json  skill_race_constraints.json  skill_roles.json
docs/: game-methods.md
native/: Cargo.toml  build.md  build.rs
native/assets/: background.rgba  banner.rgba  crest.rgba  divider.rgba  glow_orb.rgba  menu_logo.rgba  petal_01.rgba  petal_02.rgba  petal_03.rgba  sil.rgba  spark_01.rgba  spark_02.rgba  spark_03.rgba  start_game.rgba
native/assets/icons/: about.rgba  camera.rgba  capture.rgba  intro.rgba  panels.rgba  perf.rgba  skip.rgba  updates.rgba
native/src/: affinity.rs  arbiter.rs  audio.rs  bgm.rs  boot.rs  breeding_trace.rs  clipboard.rs  crashlog.rs  cyspring.rs  data.rs  diag.rs  display.rs  event_titles.rs  followers.rs  fps.rs  freecam.rs  friendlyplugins.rs  graphics.rs  hachimi_compat.rs  hooks.rs  htt.rs  htt_il2cpp.rs  http.rs  hunter.rs  icon_dump.rs  il2cpp.rs  il2cpp_json.rs  intro_player.rs  ipc.rs  jp_idle.rs  lib.rs  loadprof.rs  menu_model.rs  msgpack.rs  names.rs  overlay.rs  padder.rs  paths.rs  player_state.rs  plugins.rs  (+22 more)
native/src/hachimi_compat/: il2cpp_api.rs  init.rs  interceptor.rs  mod.rs  services.rs  vtable.rs
native/src/performance/: cyspring.rs  display.rs  fps.rs  graphics.rs  mod.rs
native/src/skip/: event.rs  mod.rs  result.rs  rival.rs  shop.rs  train.rs
native/src/tools/: log.rs  mod.rs  time.rs
native/trackside-icons/: skill_desc.tsv  skill_icon_map.csv
native/trackside-icons/chara/: 1001.rgba  1002.rgba  1003.rgba  1004.rgba  1005.rgba  1006.rgba  1007.rgba  1008.rgba  1009.rgba  1010.rgba  1011.rgba  1012.rgba  1013.rgba  1014.rgba  1015.rgba  1016.rgba  1017.rgba  1018.rgba  1019.rgba  1020.rgba  1021.rgba  1022.rgba  1023.rgba  1024.rgba  1025.rgba  1026.rgba  1027.rgba  1028.rgba  1030.rgba  1031.rgba  1032.rgba  1033.rgba  1034.rgba  1035.rgba  1036.rgba  1037.rgba  1038.rgba  1039.rgba  1040.rgba  1041.rgba  (+21 more)
native/trackside-icons/rank/: 1.rgba  10.rgba  11.rgba  12.rgba  13.rgba  14.rgba  15.rgba  16.rgba  17.rgba  18.rgba  19.rgba  2.rgba  20.rgba  21.rgba  22.rgba  23.rgba  24.rgba  25.rgba  26.rgba  27.rgba  28.rgba  29.rgba  3.rgba  30.rgba  31.rgba  32.rgba  33.rgba  34.rgba  35.rgba  36.rgba  37.rgba  38.rgba  39.rgba  4.rgba  40.rgba  41.rgba  42.rgba  43.rgba  44.rgba  45.rgba  (+58 more)
native/trackside-icons/skill/: 10011.rgba  10012.rgba  10013.rgba  10014.rgba  10021.rgba  10022.rgba  10023.rgba  10024.rgba  10031.rgba  10032.rgba  10033.rgba  10034.rgba  10041.rgba  10042.rgba  10043.rgba  10044.rgba  10051.rgba  10052.rgba  10053.rgba  10054.rgba  10061.rgba  10062.rgba  10063.rgba  1010011.rgba  20011.rgba  20012.rgba  20013.rgba  20014.rgba  20015.rgba  20021.rgba  20022.rgba  20023.rgba  20024.rgba  20031.rgba  20032.rgba  20033.rgba  20034.rgba  20041.rgba  20042.rgba  20043.rgba  (+52 more)
native/trackside-icons/uma/: 0000.rgba  1001.rgba  1002.rgba  1003.rgba  1004.rgba  1005.rgba  1006.rgba  1007.rgba  1008.rgba  1009.rgba  1010.rgba  1011.rgba  1012.rgba  1013.rgba  1014.rgba  1015.rgba  1016.rgba  1017.rgba  1018.rgba  1019.rgba  1020.rgba  1021.rgba  1022.rgba  1023.rgba  1024.rgba  1025.rgba  1026.rgba  1027.rgba  1028.rgba  1029.rgba  1030.rgba  1031.rgba  1032.rgba  1033.rgba  1034.rgba  1035.rgba  1036.rgba  1037.rgba  1038.rgba  1039.rgba  (+47 more)
preview-host/: Cargo.toml
preview-host/src/: main.rs
proxy/: CRASH-NOTES.md  Cargo.toml  build.rs  version.def
proxy/src/: lib.rs
